// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a closed Modal correctly 1`] = `
<div
  className="hidden"
>
  <div
    className="absolute inset-0 bg-gray-500 opacity-75"
  />
  <div
    className="absolute inset-0 z-10 flex items-center justify-center"
  >
    <div>
      <header
        className="flex items-center justify-between"
      >
        <h1
          className="text-lg font-semibold text-gray-500"
        >
          Hello
        </h1>
        <svg
          className="w-8 h-8 text-gray-400 duration-200 ease-in-out hover:text-gray-800"
          onClick={[Function]}
        >
          x.svg
        </svg>
      </header>
      <div
        className="flex flex-col items-center justify-around flex-grow md:flex-row"
      >
        <h1>
          Hello
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an open Modal correctly 1`] = `
<div
  className=""
>
  <div
    className="absolute inset-0 bg-gray-500 opacity-75"
  />
  <div
    className="absolute inset-0 z-10 flex items-center justify-center"
  >
    <div>
      <header
        className="flex items-center justify-between"
      >
        <h1
          className="text-lg font-semibold text-gray-500"
        >
          Hello
        </h1>
        <svg
          className="w-8 h-8 text-gray-400 duration-200 ease-in-out hover:text-gray-800"
          onClick={[Function]}
        >
          x.svg
        </svg>
      </header>
      <div
        className="flex flex-col items-center justify-around flex-grow md:flex-row"
      >
        <h1>
          Hello
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an open Modal without title correctly 1`] = `
<div
  className=""
>
  <div
    className="absolute inset-0 bg-gray-500 opacity-75"
  />
  <div
    className="absolute inset-0 z-10 flex items-center justify-center"
  >
    <div>
      <header
        className="flex items-center justify-between"
      >
        <h1
          className="text-lg font-semibold text-gray-500"
        />
        <svg
          className="w-8 h-8 text-gray-400 duration-200 ease-in-out hover:text-gray-800"
          onClick={[Function]}
        >
          x.svg
        </svg>
      </header>
      <div
        className="flex flex-col items-center justify-around flex-grow md:flex-row"
      >
        <h1>
          Hello
        </h1>
      </div>
    </div>
  </div>
</div>
`;
